47
================

03/08/23 New Move->Adopt option to generate and request signed paperwork #1231
03/08/23 Adoption contracts via checkout should use new link to animal/person
02/08/23 Fix error generating animal docs with a broken preferred image
02/08/23 Add warning of app retirement to smartphone UI as well #1096
02/08/23 Implement incident and log functions in new mobile interface #1096
02/08/23 Limit datepicker to today when giving tests/vaccinations
01/08/23 Remove people with only a cancelled reserve after X years #1239
01/08/23 Show an icon to indicate a form is for an existing person #1308
01/08/23 Fix client side validation of boarding dates/times
31/07/23 Remove animal media X years after animal leaves/dies #1254
31/07/23 PetRescue: Option to use adoption coordinator contact info #1314
31/07/23 Add form field to indicate merge person, create without merge option #1308
25/07/23 Use CSS3 DnD grab/grabbing cursors when dragging and dropping in shelterview
25/07/23 Allow diet to be added as a column to find animal results
24/07/23 Warn when adopting animal with reservations to person without reserve #1278
24/07/23 Add extra emblems (orange/brown square/circle, soccer ball, lightning)
21/07/23 Allow import of incident data via CSV #1232
21/07/23 Use days for long term instead of months and make it configurable
20/07/23 Long term alert should use long term months config switch
19/07/23 Refactor animal/person warning code, consistent for transfer/reclaim
19/07/23 Show animal and person warnings when creating movements/reservations
19/07/23 Add $CURRENT_DATE_TIME$ token
17/07/23 Extend datepicker to -70 years
17/07/23 Validate additional fields for punctuation and unique/reserved names #1310
17/07/23 Refactor message board add dialog to match newer screens
17/07/23 Defensively handle bad image id inputs when loading images
14/07/23 Separate help menu for clarity
14/07/23 Install recommended reports during database creation instead of /main