@@ -2718,7 +2718,8 @@ class csvimport(JSONEndpoint):
         asm3.asynctask.function_task(o.dbo, _("Import a CSV file", l), asm3.csvimport.csvimport, 
             o.dbo, o.post.filedata(), o.post["encoding"], o.user, 
             o.post.boolean("createmissinglookups") == 1, o.post.boolean("cleartables") == 1, 
-            o.post.boolean("checkduplicates") == 1, o.post.boolean("prefixanimalcodes") == 1)
+            o.post.boolean("checkduplicates") == 1, o.post.boolean("prefixanimalcodes") == 1,
+            o.post.boolean("entrytoday") == 1)
         self.redirect("task")
 
 class csvimport_paypal(JSONEndpoint):
