@@ -28,24 +28,29 @@ $(function() {
                 '<input id="createmissinglookups" name="createmissinglookups" type="checkbox" data-x="createmissinglookupsexplain"/> ',
                 '<label for="createmissinglookups">' + _("Create missing lookup values") + '</label>',
                 '</p>',
-                 '<div id="createmissinglookupsexplain" style="display: none">',
+                '<div id="createmissinglookupsexplain" style="display: none">',
                 html.info(_("Any animal types, species, breeds, colors, locations, etc. in the CSV file that aren't already in the database will be created during the import.")),
                 '</div>',
-                '<p>',
                 '<p>',
                 '<input id="checkduplicates" name="checkduplicates" type="checkbox" data-x="checkduplicatesexplain" /> ',
                 '<label for="checkduplicates">' + _("Merge duplicate records") + '</label>',
                 '</p>',
-                 '<div id="checkduplicatesexplain" style="display: none">',
+                '<div id="checkduplicatesexplain" style="display: none">',
                 html.info(_("People or animal records that already exist in the database will not be imported again and movement/payment data will be attached to the existing records instead.")),
                 '</div>',
-                '<p>',
                 '<p>',
                 '<input id="prefixanimalcodes" name="prefixanimalcodes" type="checkbox" data-x="prefixanimalcodesexplain" /> ',
                 '<label for="prefixanimalcodes">' + _("Prefix animal codes") + '</label>',
                 '</p>',
-                 '<div id="prefixanimalcodesexplain" style="display: none">',
+                '<div id="prefixanimalcodesexplain" style="display: none">',
                 html.info(_("Animal records in the file will have a prefix added to their ANIMALCODE column to prevent clashes with existing animals in your database.")),
+                '</div>',
+                '<p>',
+                '<input id="entrytoday" name="entrytoday" type="checkbox" data-x="entrytodayexplain" /> ',
+                '<label for="entrytoday">' + _("Set entry date to today") + '</label>',
+                '</p>',
+                '<div id="entrytodayexplain" style="display: none">',
+                html.info(_("Animal records in the file will have their ANIMALENTRYDATE overridden to today. Useful if the animals are being transferred into your shelter.")),
                 '</div>',
                 '</td>',
                 '</tr>',
